# picorng-rs

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
picorng_proto/: Cargo.toml
picorng_proto/src/: lib.rs
src/: entropy.rs  lib.rs  main.rs  protocol.rs
tiny_ecdh/: Cargo.toml  README.md  build.rs
tiny_ecdh/src/: ecdh.c  lib.rs
