[package]
name = "picorng_proto"
version = "0.1.0"
description = "PICoRNG USB protocol crate"
authors = ["Ian McLinden", "ReimuNotMoe <reimu@sudomaker.com>"]
homepage = "https://github.com/ianmclinden/picorng-rs"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.8.0"
thiserror = { version = "1.0.50", optional = true }
thiserror-no-std = "2.0.2"
tiny_ecdh = { path = "../tiny_ecdh", default-features = false }

[features]
default = ["std"]
std = ["dep:thiserror", "tiny_ecdh/std"]
