[package]
name = "tiny_ecdh"
description = "PICoRNG Utility"
version = "0.1.1"
authors = ["Ian McLinden", "ReimuNotMoe <reimu@sudomaker.com>"]
edition = "2024"

[features]
default = ["std"]
std = ["dep:thiserror"]

[dependencies]
heapless = "0.9.1"
hex = "0.4.3"
rand = "0.9.2"
thiserror = { version = "2.0.17", optional = true }
thiserror-no-std = "2.0.2"

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.45"
